--- a/proyectos/iron-man.html
+++ b/proyectos/iron-man.html
@@ -1,5 +1,5 @@
 <!--30/10/2021-->
-<!--Este proyecto nace de la idea de querer hacer un disfraz diferente para halloween y poner a prueba mis habilidades de impresión 3D, electrónica y programación.-->
+<!--This project was born out of the idea of wanting to create a unique costume for Halloween and to test my skills in 3D printing, electronics, and programming.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,12 +19,12 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/iron-man_profile.jpg">
-                        <p>Este proyecto nace con la idea de hacer un disfraz algo más creativo para el halloween del 2021, con esto en mente la mejor idea que tuve fue crear un casco de iron man ya que en esas épocas la máscara estaba tomando popularidad, para construirla fue bastante sencillo porque el diseño ya existía en el internet y solo me hizo falta escalar el tamaño de las piezas para que se acomodara al tamaño de mi cabeza y comenzar a imprimir.</p><br>
-                        <p>Posterior a la impresión tuve que unir todas las piezas con pegamento instantáneo debido a que la máscara no se podía imprimir en una sola pieza, una vez pegado procedí con el paso más tedioso que fue lijar todas las superficies visibles para que desaparecieran las lineas naturales que deja una impresora 3D en todas sus partes, con esto listo procedí a pintar con aerosol rojo y dorado hasta que llegué al resultado que quería.</p><br>
-                        <p>En la parte de la electrónica el cerebro de la máscara era un arduino uno y el actuador que permitía su movimiento era un servomotor de 10 Kg, para el color de los ojos usé LED's RGB y como sensores de entrada para indicarle a la máscara cuando cambiar de color y cuando abrirse o cerrarse usé sensores táctiles capacitivos.</p>
+                        <p>This project was born with the idea of creating a more creative costume for Halloween 2021. With that in mind, the best idea I had was to create an Iron Man helmet, as the Iron Man mask was gaining popularity at that time. Constructing it was relatively simple because the design already existed on the internet, and I only needed to scale the size of the pieces to fit my head and start printing.</p><br>
+                        <p>After the printing process, I had to assemble all the pieces using instant glue because the mask couldn't be printed as a single piece. Once the pieces were glued together, I proceeded with the most tedious step, which was sanding all the visible surfaces to remove the natural lines left by a 3D printer. With that done, I painted the mask with red and gold spray paint until I achieved the desired result.</p><br>
+                        <p>In terms of electronics, the brain of the mask was an Arduino Uno, and the actuator that allowed its movement was a 10kg servo motor. For the eye color, I used RGB LEDs, and as input sensors to indicate when to change color and when to open or close, I used capacitive touch sensors.</p>
                         <img src="../images/iron-man_profile.jpg">
                     </div>
                 </div>
@@ -32,7 +32,7 @@
         </div>  
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/iron-man_1.jpg">
