--- a/proyectos/oci-2015.html
+++ b/proyectos/oci-2015.html
@@ -1,5 +1,5 @@
 <!--10/07/2015-->
-<!--Una de las primeras formas en que me destaqué del resto fue ganando la Olimpiada del Conocimiento Infantil 2015 dónde los mejores 1000 alumnos de todo el país a nivel sexto de primaria son galardonados con una beca hasta finalizar sus estudios universitarios y una experiencia cultural con el resto de ganadores de toda la república.-->
+<!--One of the first ways in which I stood out from the rest was by winning the Olimpiada del Conocimiento Infantil 2015 (Children's Knowledge Olympics), where the top 1000 students nationwide in sixth grade are awarded a scholarship until they finish their university studies, along with a cultural experience with the other winners from across the country.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,12 +19,12 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/oci-2015_profile.jpg">
-                        <p>Una de las primeras formas en las que destaqué del resto fue ganando la Olimpiada del Conocimiento Infantil 2015, este es un concurso de inteligencia para todos los alumnos de sexto año de primaria a nivel nacional en México, la eliminatoria consiste de una serie de exámenes para evaluar tus conocimientos donde los 1000 mejores resultados a nivel nacional son ganadores de una beca durante la duración de sus estudios, en adición a esto tambien ganan un viaje de dos semanas a la ciudad de México en la forma de una experiencia cultural donde llegan a conocer y platicar con el presidente de la república.</p><br>
-                        <p>La eliminación puede variar de estado a estado pero en mi caso comenzó con una nominación voluntaria entre los alumnos de mi primaria para realizar un examen cuyo mejor resultado representaría a la escuela ya que solo se puede nominar un alumno por institución, sorprendentemente resulté ganador de esta etapa interna y fui a competir a otra escuela a la etapa zona, después de salir ganador competí en la etapa regional y finalmente en la etapa estatal que era la última.</p><br>
-                        <p>En esta se escogieron 72 ganadores que representarían al estado de México y yo fui uno de ellos, desde entonces he estado becado por mi estado y seguiré recibiendo un apoyo anual de 10000 pesos hasta terminar mis estudios universitarios.</p>
+                        <p>One of the first ways in which I stood out from the rest was by winning the Olimpiada del Conocimiento Infantil 2015 (Children's Knowledge Olympics). This is an intelligence competition for all sixth-grade students nationwide in Mexico. The elimination round consists of a series of exams to evaluate your knowledge, and the top 1000 results at the national level are awarded a scholarship for the duration of their studies. In addition to this, they also win a two-week trip to Mexico City as a cultural experience, where they get to meet and talk with the President of the Republic.</p><br>
+                        <p>The elimination process may vary from state to state, but in my case, it started with a voluntary nomination among the students of my elementary school to take an exam. The best result from this exam would represent the school, and only one student can be nominated per institution. Surprisingly, I won this internal stage and moved on to compete in the zonal stage, which took place at another school. After winning at the zonal level, I proceeded to the regional stage and finally to the state level, which was the last stage of the competition.</p><br>
+                        <p>In this stage, 72 winners were selected to represent the state of Mexico, and I was one of them. Since then, I have been receiving a scholarship from my state, and I will continue to receive an annual support of 10,000 pesos until I finish my university studies.</p>
                         <img src="../images/oci-2015_profile.jpg">
                     </div>
                 </div>
@@ -32,7 +32,7 @@
         </div>  
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/oci-2015_1.jpg">
