--- a/proyectos/paolo-inspires.html
+++ b/proyectos/paolo-inspires.html
@@ -1,5 +1,5 @@
 <!--11/09/2022-->
-<!--Este es mi canal de youtube donde hago videos de temas variados y el principal enfoque es educar y dar a conocer cosas que la mayoría de las personas encuentran aburridas de una forma más didáctica.-->
+<!--This is my YouTube channel where I create videos on various topics, with a primary focus on educating and presenting things that most people find boring in a more engaging and interactive way.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,10 +19,10 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/paolo-inspires_profile.jpg">
-                        <p align="justify">Este proyecto es una de mis más grandes pasiones, nace de mi amor por difundir el conocimiento ya que yo creo que este no sirve de nada si no se comparte. La idea de este es crear videos de temas complejos que son muy mal enseñados en las escuelas y de los cuales existen recursos muy limitados en internet y subirlos a YouTube para que cualquier persona pueda acceder a ellos sin la necesidad de tener que pagar por un curso o para aquellas personas que quieren aprender pero no tienen las posibilidades económicas de costear una universidad.<br><br>Los videos son hechos con muchas ganas pero cada día estudio más para poder hacer producciones audiovisuales de mayor calidad, es por ello que mis estándares de producción desde hacer unos meses requieren que todos los contenidos de un video se hagan desde un lenguaje de programación para producir animaciones interesantes y constantes, esto me ha traido muchos seguidores que opinan que los recursos visuales les ayudan a entender mejor el tema.<br><br>El canal no solo me sirve para difundir conocimientos, sino que también para yo aprender más ya que para la creación de un video necesito prepararme y leer para asegurarme que toda la información que comparto es real y de utilidad.</p>
+                        <p align="justify">This project is one of my greatest passions. It stems from my love for spreading knowledge because I believe that knowledge is of no use if it is not shared. The idea behind this project is to create videos on complex topics that are poorly taught in schools and for which there are limited resources available online. These videos are then uploaded to YouTube so that anyone can access them without having to pay for a course or for those individuals who want to learn but do not have the financial means to afford a university education.<br><br>The videos are created with great enthusiasm, and I continuously study to improve the quality of the audiovisual productions. That's why, for the past few months, my production standards require that all the content of a video be created using a programming language to produce engaging and dynamic animations. This approach has attracted many followers who appreciate that the visual resources help them better understand the topics being presented.<br><br>The channel not only serves as a platform for sharing knowledge but also as a means for me to continue learning. In order to create a video, I need to prepare and research to ensure that all the information I share is accurate and useful. This process of gathering and organizing information allows me to deepen my understanding of the topics and expand my own knowledge. It's a rewarding experience to both educate others and enhance my own learning journey through the channel.</p>
                         <img src="../images/paolo-inspires_profile.jpg">
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/paolo-inspires_1.jpg">
