--- a/proyectos/plotter-cnc.html
+++ b/proyectos/plotter-cnc.html
@@ -1,5 +1,5 @@
 <!--15/10/2020-->
-<!--Una máquina CNC de muy bajo costo para dibujar en superficies bidimensionales.-->
+<!--A low-cost CNC machine for drawing on two-dimensional surfaces.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,10 +19,10 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="small-description">
+                    <h1 class="subtitle">What is it about?</h1>
+                    <div class="description">
                         <img src="../images/plotter-cnc_profile.jpg">
-                        <p>Las máquinas CNC (Computer Numeric Control) son mis dispositivos favoritos en el planeta, pero comprar o incluso fabricar uno tiende a ser muy costoso, por ello durante la pandemia me entró la curiosidad por aprender más sobre su funcionamiento, el primer dispositivo de este estilo que hice fue un <a href="./eggcnc" target="_blank">eggbot</a> pero aún quería hacer algo más real a lo que verdaderamente se conoce como un CNC, por ello creé esta máquina con 3 ejes móviles "x", "y", y "z" con los componentes de una impresora antigua y usé un arduino para darle vida, el programa usado era una librería llamada grbl y por lo tanto no tuve que programar nada, solo me hacía falta convertir los dibujos que quería crear a "código g" un lenguaje que entienden este tipo de máquinas y presionar iniciar para comenzar a dibujar.</p>
+                        <p>CNC machines are my favorite devices on the planet, but buying or even building one tends to be very expensive. That's why, during the pandemic, I became curious to learn more about how they work. The first device of this kind that I made was an <a href="./eggcnc" target="_blank">eggbot</a>, but I still wanted to create something more akin to a traditional CNC machine. That's when I built this machine with three movable axes, "x," "y," and "z," using components from an old printer, and I used an Arduino to bring it to life. The program I used was a library called GRBL, so I didn't have to write any code. All I needed to do was convert the drawings I wanted to create into "G-code," a language understood by these types of machines, and press start to begin drawing.</p>
                         <img src="../images/plotter-cnc_profile.jpg">
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/plotter-cnc_1.jpg">
