--- a/proyectos/regata.html
+++ b/proyectos/regata.html
@@ -1,5 +1,5 @@
 <!--22/09/2022-->
-<!--Un concurso que se realiza año con año en el Tecnológico de Monterrey Campus Toluca cuyo objetivo es construir un barco tripulable para dos personas usando solamente cartón y botellas-->
+<!--A contest that takes place every year at Tecnológico de Monterrey Campus Toluca, where the objective is to build a two-person, navigable boat using only cardboard and bottles.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -10,7 +10,7 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Regata Industrial</title>
+        <title>Industrial Regatta</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -19,12 +19,12 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/regata_profile.jpg">
-                        <p>El Tecnológico de Monterrey Campus Toluca organiza cada año un concurso cuyo objetivo es que equipos de 5 personas construyan un barco usando solamente cartón y botellas de plástico, yo participé en la edición 2022 donde en tan solo 1 semana construimos y decoramos un barco de cartón con una temática emo haciéndole alusión a nuestro nombre "emos 2000".</p><br>
-                        <p>El proceso de construcción fue muy sencillo ya que no requirió materiales ni herramienta compleja, usamos varias capas de cartón muy resistente y "duct tape" para fijar la estructura, podría decir que lo más laborioso fue la decoración ya que tuvimos que recortar muchos cuadrados y enmicarlos para evitar que se echaran a perder con el agua y finalmente hicimos algunos detalles extras con una impresora 3D.</p><br>
-                        <p>En la competencia solo pudimos completar la mitad del circuito porque el barco tenía demasiada fuerza de flotación y era muy inestable, por lo que a la mitad del camino nos volteamos, a pesar de no haber ganado nos divertimos y aprendimos mucho sobre la aplicación de la fuerza boyante y el trabajo en equipo.</p>
+                        <p>Tecnológico de Monterrey Campus Toluca organizes an annual contest where teams of 5 people build a boat using only cardboard and plastic bottles. I participated in the 2022 edition where we built and decorated a cardboard boat with an emo theme in just 1 week, making reference to our team name "emos 2000".</p><br>
+                        <p>The construction process was fairly simple as it didn't require complex materials or tools. We used several layers of sturdy cardboard and duct tape to secure the structure. The most time-consuming part was the decoration, as we had to cut out many squares and laminate them to prevent them from getting ruined by water. Additionally, we added some extra details using a 3D printer.</p><br>
+                        <p>In the competition, we were only able to complete half of the course because the boat had excessive buoyant force and was very unstable. As a result, we capsized halfway through the race. Although we didn't win, we had a great time and learned a lot about buoyant force and teamwork.</p>
                         <img src="../images/regata_profile.jpg">
                     </div>
                 </div>
@@ -32,7 +32,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/regata_1.jpg">
