--- a/proyectos/rlc.html
+++ b/proyectos/rlc.html
@@ -1,5 +1,5 @@
 <!--30/05/2021-->
-<!--RLC o Room Light Changer es un dispositivo iot que permite controlar la luz de una habitación de manera remota.-->
+<!--RLC (Room Light Changer) is an IoT device that allows remote control of the lighting in a room.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,20 +19,20 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/rlc_profile.jpg">
-                        <p>RLC o Room Light Changer es un dispositivo iot que permite controlar la luz de una habitación de manera remota o llevando un control del número de personas dentro del cuarto y apagándola automáticamente cuando se encuentre vacío.</p><br>
-                        <p>El dispositivo es una evolución de un proyecto previo <a href="./roc" target="_blank">Room Occupancy Counter</a> el cual tenía como propósito limitar el número máximo de personas en una habitación con la llegada de la pandemia. Usando este mismo concepto mantuve el funcionamiento original pero cambié el cerebro del sistema de usar un arduino nano a usar un esp32 y darle cualidades de conexión wifi lo que me permitió crear una aplicación en mi teléfono para encender o apagar la luz de mi habitación con solo 1 click.</p><br>
-                        <p>Este dispositivo contaba con muchas otras carácterísticas además de las ya mencionadas, entre ellas están:</p>
+                        <p>RLC (Room Light Changer) is an IoT device that allows remote control of the lighting in a room or keeps track of the number of people inside the room and automatically turns off the lights when it is empty.</p><br>
+                        <p>The device is an evolution of a previous project called <a href="./roc" target="_blank">Room Occupancy Counter</a>, which aimed to limit the maximum number of people in a room with the onset of the pandemic. Using the same concept, I maintained the original functionality but changed the brain of the system from using an Arduino Nano to using an ESP32, which enabled WiFi connectivity. This allowed me to create a smartphone application to turn the lights in my room on or off with just one click.</p><br>
+                        <p>This device had many other features in addition to the ones already mentioned. Some of these features include:</p>
                         <ul>
-                            <li>Medidor de humedad.</li>
-                            <li>Medidor de temperatura.</li>
-                            <li>Interfaz de control local con botones.</li>
-                            <li>Pantalla LCD para la visualización de datos de forma local.</li>
-                            <li>Alarma para indicar cuando hay muchas personas.</li>
-                            <li>Conexión wifi.</li>
-                            <li>Conexión bluetooth.</li>
+                            <li>Humidity Meter.</li>
+                            <li>Temperature Meter.</li>
+                            <li>Local Control Interface with Buttons.</li>
+                            <li>Local Data Display with LCD Screen.</li>
+                            <li>Alarm to indicate overcrowding.</li>
+                            <li>Wi-Fi connectivity.</li>
+                            <li>Bluetooth connectivity.</li>
                         </ul>
                         <img src="../images/rlc_profile.jpg">
                     </div>
@@ -41,7 +41,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/rlc_1.jpg">
