--- a/proyectos/roc.html
+++ b/proyectos/roc.html
@@ -1,5 +1,5 @@
 <!--14/07/2020-->
-<!--ROC o Room Occupancy Counter es un dispositivo electrónico que desarrollé con la llegada de la pandemia para mantener un conteo del número de personas dentro de una habitación y hacer sonar una alarma cuando se excedía un límite.-->
+<!--ROC or Room Occupancy Counter is an electronic device that I developed with the arrival of the pandemic to keep track of the number of people inside a room and sound an alarm when it exceeded a limit.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,13 +19,13 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/roc_profile.jpg">
-                        <p>ROC o Room Occupancy Counter es un proyecto que realicé como medida de prevención sanitaria para la pandemia, consiste en dos sensores ultrasónicos colocados uno encima del otro que detectan interrupciones en las distancias para identificar si una persona pasó enfrente de ellos, la razón del por qué son dos es que se necesita saber cual detectó a la persona primero para determinar si es que está ingresando o saliendo de la habitación.</p><br>
-                        <p>En adición se disponía de una interfaz de usuario en el mismo dispositivo para navegar por las opciones como cambiar manualmente el número actual de personas, resetear el dispositivo, cambiar los modos de operación, modificar el límite de personas, desplegar datos en la pantalla LCD y reproducir un sonido cuando se excedía el número máximo de personas.</p><br>
-                        <p>Para que la idea no quedara solo en mi y en el alcance que podía tener con mis conocidos decidí realizar una <a href="https://www.instructables.com/Rom-Occupancy-Counter/" target="_blank">publicación</a> paso a paso de como construir el dispositivo para que se pudiera replicar en cualquier parte del mundo</p><br>
-                        <p>Durante el tiempo que fue relevante recibí varios mensajes de personas que lo realizaron pero solo en una ocasión un grupo de amigos de indonesia me compartió un <a href="https://www.youtube.com/watch?v=5XSxSdnZA7M" target="_blank">video</a> sobre el dispositivo funcionado, mostrando así el gran impacto que tuvo mi aportación a la comunidad.</p>
+                        <p>ROC or Room Occupancy Counter is a project I created as a preventive measure during the pandemic. It consists of two ultrasonic sensors placed one above the other to detect interruptions in distances and identify if a person has passed in front of them. The reason for having two sensors is to determine which one detected the person first, in order to determine if they are entering or exiting the room.</p><br>
+                        <p>In addition, the device had a user interface that allowed navigation through options such as manually changing the current number of people, resetting the device, changing operating modes, modifying the person limit, displaying data on the LCD screen, and playing a sound when the maximum number of people was exceeded.</p><br>
+                        <p>To ensure that the idea didn't remain limited to just myself and my acquaintances, I decided to create a step-by-step <a href="https://www.instructables.com/Rom-Occupancy-Counter/" target="_blank">guide</a> on how to build the device so that it could be replicated anywhere in the world.</p><br>
+                        <p>During the time it was relevant, I received several messages from people who had built the device themselves. However, once a group of friends from Indonesia shared a <a href="https://www.youtube.com/watch?v=5XSxSdnZA7M" target="_blank">video</a>with me showcasing the device in action. This demonstrated the significant impact my contribution had on the community.</p>
                         <img src="../images/roc_profile.jpg">
                     </div>
                 </div>
@@ -33,7 +33,7 @@
         </div>
         <div id="ejemplos"> 
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/roc_1.jpg">
