--- a/proyectos/router-cnc.html
+++ b/proyectos/router-cnc.html
@@ -1,5 +1,5 @@
 <!--25/07/2021-->
-<!--Un CNC de 1.2x1.2 metros de área de trabajo hecho completamente de madera que puede maquinar piezas en cualquier material y con el cual ofrezco servicios de manufactura sobre pedido.-->
+<!--A CNC machine with a working area of 1.2x1.2 meters, made entirely of wood, capable of machining parts in any material, and with which I offer custom manufacturing services.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,13 +19,13 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/router-cnc_profile.jpg">
-                        <p>Este es el proyecto al que más afecto le tengo ya que las máquinas CNC son mis dispositivos electromecánicos favoritos en todo el mundo y por fin después de varios años de haberlas conocido e incluso haber tratado de replicarlas a pequeña escala con dos de mis proyectos previos <a href="./eggcnc" target="_blank">eggbot</a> y <a href="./plotter-cnc" target="_blank">plotter cnc</a>, surgió la oportunidad de hacerla a gran escala con ayuda de mi amigo y exprofesor de robótica Erick García.</p><br>
-                        <p>La idea era construir la máquina más grande, precisa y económica que pudieramos pero que a su vez fuera capaz de cortar las piezas que necesitábamos para construir robots (maderas, policarbonato, aluminio, plásticos duros, etc.) Por ello decidimos hacer la estructura entera de triplay de 3/4, usar rieles din y baleros en forma de v para el movimiento lineal del eje "x" e "y" y finalmente usamos ejes acerados y baleros lineales para el movimiento del eje "z". Los componentes activos del sistema eran motores NEMA 23 colocados con una banda tanto para el eje "x" como "y" y un tornillo sin fin para el eje z.</p><br>
-                        <p>El programa para su funcionamiento es Mach3 donde podemos controlar la máquina de forma manual, en adición se puede usar una línea de comandos para enviar instrucciones una a una y lo mejor de todo es que podemos importar archivos de texto con todas las instrucciones para correr el corte que necesitemos, estos son generados a partir de archivos DXF en el programa VCarve y a su vez estos son creados usando herramientas de diseño como photoshop o softwares de modelado 3D como SolidWorks.</p><br>
-                        <p>Con esta máquina hemos creado muchas piezas sobre pedido para decoraciones de negocios locales e incluso lo hemos usado para manufacturar las piezas de mas de 10 robots para la competencia de FRC a lo largo del país.</p>
+                        <p>This is the project that I hold dear to my heart, as CNC machines are my favorite electromechanical devices in the world. After several years of learning about them and even attempting to replicate them on a smaller scale with two of my previous projects, <a href="./eggcnc" target="_blank">eggbot</a> and <a href="./plotter-cnc" target="_blank">plotter cnc</a>, the opportunity arose to build it on a larger scale with the help of my friend and former robotics teacher, Erick García.</p><br>
+                        <p>The idea was to build the largest, most precise, and cost-effective machine possible, capable of cutting the parts we needed to construct robots (wood, polycarbonate, aluminum, hard plastics, etc.). That's why we decided to make the entire structure out of 3/4-inch plywood, use DIN rails and V-shaped bearings for the linear movement of the "x" and "y" axes, and finally, use steel shafts and linear bearings for the movement of the "z" axis. The active components of the system were NEMA 23 motors, coupled with timing belts for the "x" and "y" axes, and a lead screw for the "z" axis.</p><br>
+                        <p>The program used to operate the CNC machine is Mach3, which allows us to control the machine manually. Additionally, we can use a command line interface to send instructions one by one. The best part is that we can import text files containing all the instructions for running the desired cut. These files are generated from DXF files in the VCarve program, which, in turn, can be created using design tools like Photoshop or 3D modeling software like SolidWorks.</p><br>
+                        <p>With this machine, we have created many custom-made pieces for local businesses' decorations. We have also used it to manufacture parts for over 10 robots for the FRC competition throughout the country.</p>
                         <img src="../images/router-cnc_profile.jpg">
                     </div>
                 </div>
@@ -33,7 +33,7 @@
         </div>
         <div id="ejemplos"> 
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/router-cnc_1.jpg">
