--- a/proyectos/logic-design.html
+++ b/proyectos/logic-design.html
@@ -1,5 +1,5 @@
 <!--27/02/2023-->
-<!--Página de resumen de diseño de circuitos electrónicos para sintetizar en FPGA's.-->
+<!--Page summary of electronic circuit design for synthesis in FPGAs.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -10,7 +10,7 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Página de Diseño Lógico</title>
+        <title>Logic Design Page</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -19,12 +19,12 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/logic-design_profile.jpg">
-                        <p>Para mi clase de "Diseño con Lógica Programable" en el cuarto semestre de la carrera de Ingeniería en Robótica y Sistemas Digitales creé una página web para que mis compañeros pudieran acceder a recursos para el diseño de circuitos combinacionales tradicionales y circuitos secuenciales complejos que pueden ser sintetizados en una FPGA, la meta de la página es explicar el funcionamiento teórico de estos circuitos y mostrar ejemplos de su descripción en 3 de los lenguajes descriptores de hardware más populares en la industria "AHDL, VHDL y Verilog".</p><br>
-                        <p>La página tuvo un impacto muy grande en cada uno de mis compañeros ya que cuando tenían dudas en las entregas de sus tareas y proyectos, podían simplemente acceder a la página y buscar las soluciones propuestas por mi y ver de que forma podían adaptarlas a la sintetización de su propio diseño. Uno de los ejemplos de los que más recibí las gracias fue en la creación de un ALU (Unidad Aritmética Lógica) ya que este implementaba de manera combinacional la división de números de N bits y desarrollar este circuito de manera manual sería casi imposible, por lo que la forma en que lo implementé usando librerías externas les pareció increible a la totalidad de mis compañeros para simplificar no solo el ALU sino el resto de sus diseños de aquí en adelante.</p><br>
-                        <p>Toda la información puede encontrarse <a href="https://paoloreyes.github.io/logicdesign/" target="_blank">aquí</a>.</p>
+                        <p>For my "Digital Logic Design" class in the fourth semester of my Robotics and Digital Systems Engineering degree, I created a webpage for my classmates to access resources for the design of traditional combinational circuits and complex sequential circuits that can be synthesized in an FPGA. The goal of the webpage is to explain the theoretical functioning of these circuits and provide examples of their description using three of the most popular hardware description languages in the industry: AHDL, VHDL, and Verilog.</p><br>
+                        <p>The webpage had a significant impact on each of my classmates, as it provided them with solutions and guidance for their assignments and projects. Whenever they had doubts or needed assistance, they could simply access the webpage and find proposed solutions to adapt to their own design synthesis. One example for which I received many expressions of gratitude was the creation of an ALU (Arithmetic Logic Unit). The ALU implemented a combinational division of N-bit numbers, and manually designing such a circuit would have been nearly impossible. Therefore, the way I implemented it using external libraries was highly appreciated by all my classmates. It not only simplified the ALU design but also facilitated the rest of their designs going forward.</p><br>
+                        <p>All the information can be found <a href="https://paoloreyes.github.io/logicdesign/" target="_blank">here</a>.</p>
                         <img src="../images/logic-design_profile.jpg">
                     </div>
                 </div>
@@ -32,7 +32,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/logic-design_1.jpg">
