--- a/proyectos/robociety.html
+++ b/proyectos/robociety.html
@@ -1,5 +1,5 @@
 <!--29/10/2022-->
-<!--Un grupo estudiantil donde creamos robots de competencia y en el cual soy encargado de los sistemas de control.-->
+<!--A student group where we create competition robots, and I am in charge of the control systems.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,20 +19,20 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/robociety_profile.jpg">
-                        <p>Robociety es un grupo estudiantil del Tecnológico de Monterrey Campus Toluca que participa en gran variedad de competencias de robótica, algunas de estas son:</p>
+                        <p>Robociety is a student group from the Tecnológico de Monterrey Campus Toluca that participates in a wide variety of robotics competitions. Some of these include:</p>
                         <ul>
                             <li>Sumo.</li>
                             <li>Mini Sumo.</li>
                             <li>Micro Sumo.</li>
-                            <li>Laberinto.</li>
-                            <li>Guerra de robots.</li>
-                            <li>Seguidores de línea.</li>
+                            <li>Maze.</li>
+                            <li>Robot war.</li>
+                            <li>Line follower.</li>
                         </ul>
-                        <p>Mi trabajo en el equipo es como líder de sistemas de control, me encargo de programar a muy bajo nivel las librerías para movimientos perfectos usando encoders, a su vez enseño al resto del equipo la programación con arduino directamente con registros para usar interrupciones y sistemas escondidos del microcontrolador atmega328p para obtener mejores resultados con nuestros robots.</p><br>
-                        <p>En el semestre que formé parte del equipo fuimos a competir a Oaxaca y a Tlaxcala obteniendo muy buenos resultados a pesar de que casi todos los miembros del equipo eramos nuevos.</p>
+                        <p>My role in the team is as the leader of control systems. I am responsible for programming low-level libraries for precise movements using encoders. I also teach the rest of the team about programming with Arduino, directly accessing registers to use interrupts and hidden features of the microcontroller (ATmega328P) to achieve better results with our robots.</p><br>
+                        <p>During the semester that I was part of the team, we competed in Oaxaca and Tlaxcala, achieving very good results despite most of the team members being new.</p>
                         <img src="../images/robociety_profile.jpg">
                     </div>
                 </div>
@@ -40,7 +40,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <video autoplay muted loop playsinline>
